@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libgcompris-1.0
+Description: libgcompris
+Requires: libart-2.0 pango pangoft2 gtk+-2.0 libgnomecanvas-2.0
+Version: @VERSION@
+Libs: ${pc_top_builddir}/${pcfiledir}/libggcompris-1.la
+Cflags: -I${pc_top_builddir}/${pcfiledir}/..
