@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libgcompris-2.0
+Description: libggcompris
+Requires: libart-2.0 pango pangoft2 gtk+-2.0 libgnomecanvas-2.0
+Version: @VERSION@
+Libs: -L${libdir} -lgcompris-1
+Cflags: -I${includedir}/libgcompris-2.0
